[package]
name = "throttled-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-timer = "3.0.3"
pin-project-lite = "0.2.9"

[dev-dependencies]
async-runtime = { git = "https://github.com/bells307/async-runtime" }
